<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Package -->
    <string name="app_description">Get LRC format lyrics.</string>
    <string name="label_execute_get_lyrics">Get Lyrics</string>
    <string name="label_execute_search_lyrics">Search Lyrics</string>

    <!-- Label -->
    <string name="label_title">Title</string>
    <string name="label_artist">Artist</string>
    <string name="label_album">Album</string>
    <string name="label_rate">Rate</string>
    <string name="label_uploader">From</string>
    <string name="label_file_name">File Name</string>
    <string name="label_lang">Lang</string>
    <string name="label_confirmation">Confirmation</string>
    <string name="label_edit">Edit</string>

    <string name="loading">Loading…</string>
    <string name="label_close">Close</string>

    <!-- Service -->
    <string name="message_no_media">The media is not selected.</string>
    <string name="message_lyrics_success">Succeeded to get lyrics.</string>
    <string name="message_lyrics_failure">Failed to get lyrics.</string>

    <!-- Activity -->
    <string name="title_activity_search">Search</string>
    <string name="title_activity_cache">Cache</string>
    <string name="title_activity_settings">Setting</string>

    <!-- Main Activity -->
    <string name="label_button_search">Search</string>
    <string name="label_button_cache">Cache</string>
    <string name="label_button_settings">Settings</string>
    <string name="label_button_launch_medoly">Launch Medoly</string>
    <string name="message_no_medoly">Please install Medoly.</string>

    <!-- Search Activity -->
    <string name="menu_search_save_cache">Save to cache</string>
    <string name="menu_search_save_file">Save to file</string>
    <string name="message_save_file">Saved the lyrics to file.</string>
    <string name="message_save_cache">Saved the search result to cache.</string>
    <string name="message_lyrics_save_succeeded">Succeeded to save lyrics.</string>
    <string name="message_lyrics_save_failed">Failed to save lyrics.</string>
    <string name="error_exists_lyrics">Select lyrics.</string>
    <string name="error_input_condition">Input search conditions.</string>
    <string name="label_search_item_separator"> / </string>
    <string name="label_search_item_download">Download:%1$d</string>
    <string name="label_search_item_rating">Rating:%1$.1f(%2$d)</string>
    <string name="label_search_item_from">From:%1$s</string>

    <!-- Cache Activity -->
    <string name="menu_cache_delete">Delete cache</string>
    <string name="error_delete_cache_check">Check the deletion items.</string>
    <string name="message_delete_cache">Deleted the checked caches.</string>
    <string name="message_dialog_cache_delete">Delete checked caches.</string>
    <string name="message_dialog_cache_delete_error">An error occurred during deletion.</string>

    <!-- Settings Activity -->
    <string name="settings_summary_current_value">[Current Value: %1$s]</string>
    <string name="settings_not_set">Not set</string>

    <!-- Confirm Dialog -->
    <string name="message_dialog_confirm_save_cache">Save the search result to cache.</string>
    <string name="label_dialog_confirm_save_cache">Save</string>

    <!-- Normalize Dialog -->
    <string name="title_dialog_normalize">Quick Edit</string>
    <string name="label_dialog_normalize_before_edit">Before</string>
    <string name="label_dialog_normalize_after_edit">After</string>
    <string name="label_dialog_normalize_normalize">Normalize</string>
    <string name="label_dialog_normalize_remove_parentheses">Remove parenthesis</string>
    <string name="label_dialog_normalize_remove_dash">Remove dash and beyond</string>
    <string name="label_dialog_normalize_remove_info">Remove info(e.g., &quot;off vocal&quot;)</string>
    <string name="label_dialog_normalize_reset">Reset</string>

    <!-- Cache Dialog -->
    <string name="label_dialog_cache_delete_lyrics">Delete Lyrics</string>
    <string name="label_dialog_cache_delete_cache">Delete Cache</string>
    <string name="label_dialog_cache_research">Re-search</string>
    <string name="label_dialog_cache_delete">Delete</string>
    <string name="message_dialog_cache_none">No lyrics.</string>



    <!-- About Dialog -->
    <string name="label_dialog_about_ver">Ver. %1$s</string>
    <string name="label_dialog_about_developer">Developer</string>
    <string name="label_dialog_about_email">Email</string>
    <string name="label_dialog_about_license">License</string>
    <string name="label_dialog_about_privacy_policy">Privacy Policy</string>
    <string name="label_dialog_about_google_play">Google Play</string>
    <string name="label_dialog_about_link">Link</string>
    <string name="label_dialog_about_library">[Library]</string>

    <!-- Preferences -->
    <string name="title_preference_category_event">Event</string>
    <string name="title_preference_category_info">Information</string>

    <string name="pref_title_event_get_lyrics">Get Lyrics Event</string>
    <string name="pref_summary_event_get_lyrics">Select the event to get lyrics.</string>
    <string name="pref_title_use_cache">Search Cache</string>
    <string name="pref_summary_use_cache">Search the lyrics in the cache.</string>
    <string name="pref_title_cache_result">Save Lyrics</string>
    <string name="pref_summary_cache_result">Save the lyrics of event search result in the cache.</string>
    <string name="pref_title_cache_non_result">Save Empty Result</string>
    <string name="pref_summary_cache_non_result">Save empty data of the event search result in the cache.</string>
    <string name="pref_title_search_first_language">First Language</string>
    <string name="pref_summary_search_first_language">Set the top priority language of lyrics to search.</string><!--Set the top priority language of lyrics to search.-->
    <string name="pref_title_search_second_language">Second Language</string>
    <string name="pref_summary_search_second_language">Set the second priority language of lyrics to search.</string>
    <string name="pref_title_search_third_language">Third Language</string>
    <string name="pref_summary_search_third_language">Set the third priority language of lyrics to search.</string>
    <string name="pref_title_search_non_preferred_language">Get Non-Preferred Language</string>
    <string name="pref_summary_search_non_preferred_language">Get the other language lyrics if priority language can not found.</string>
    <string name="pref_title_search_language_threshold">Language Threshold</string>
    <string name="pref_summary_search_language_threshold">Set the threshold for language determination to between 0.0 – 1.0. (Default: 0.5)</string>
    <string name="pref_title_file_name_default">Default File Name</string>
    <string name="pref_summary_file_name_default">Select the default filename for saving.</string>
    <string name="pref_title_file_name_separator">File Name Separator</string>
    <string name="pref_summary_file_name_separator">Input a separator between the title and the artist for default file name.</string>
    <string name="pref_title_post_success_message_show">Show Success Message</string>
    <string name="pref_summary_post_success_message_show">Show message when lyrics acquisition succeeded.</string>
    <string name="pref_title_post_failure_message_show">Show Failure Message</string>
    <string name="pref_summary_post_failure_message_show">Show message when lyrics acquisition failed.</string>

    <string name="pref_title_application_details">App Info</string>
    <string name="pref_summary_application_details">Show application information of this device.</string>
    <string name="pref_title_about">About</string>
    <string name="pref_summary_about">Show about.</string>

    <!-- System -->
    <string name="error_app">The operation failed due to an error.</string>
    <string name="error_dialog_dismissed">Open the dialog again.</string>



    <!-- List -->

    <!-- Plugin event -->
    <string-array name="event_get_lyrics_entries">
        <item>Invalid</item>
        <item>@string/label_plugin_operation_media_open</item>
        <item>@string/label_plugin_operation_play_start</item>
    </string-array>

    <!-- File name -->
    <string-array name="file_name_default_entries">
        <item>[Title]</item>
        <item>[Title] [Artist]</item>
        <item>[Artist] [Title]</item>
    </string-array>

</resources>
