<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.MainActivity"
        tools:ignore="MergeRootFrame">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/launchSearchButton"
                    android:layout_width="@dimen/main_button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/main_button_margin"
                    android:drawableStart="@drawable/ic_find"
                    android:text="@string/label_button_search" />

                <Button
                    android:id="@+id/launchCacheButton"
                    android:layout_width="@dimen/main_button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/main_button_margin"
                    android:drawableStart="@drawable/ic_db"
                    android:text="@string/label_button_cache" />

                <Button
                    android:id="@+id/launchSettingsButton"
                    android:layout_width="@dimen/main_button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/main_button_margin"
                    android:drawableStart="@drawable/ic_settings"
                    android:text="@string/label_button_settings" />

                <Button
                    android:id="@+id/launchMedolyButton"
                    android:layout_width="@dimen/main_button_width"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/main_button_margin"
                    android:drawableStart="@drawable/ic_medoly"
                    android:text="@string/label_button_launch_medoly" />

            </LinearLayout>
        </ScrollView>

    </FrameLayout>

</layout>
