<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.SearchActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchInputLayout"
        tools:stretchColumns="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <Button
                android:text="@string/label_title"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/searchTitleButton"
                android:textSize="14sp"
                android:paddingEnd="8dp"
                android:paddingStart="8dp"
                android:gravity="center_vertical|center_horizontal|center" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/searchTitleEditText"
                tools:layout_width="match_parent"
                android:layout_weight="1" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/searchClearButton"
                android:src="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@null" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <Button
                android:text="@string/label_artist"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/searchArtistButton"
                android:textSize="14sp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/searchArtistEditText"
                android:layout_weight="1" />



            <ImageButton
                android:src="@android:drawable/ic_menu_search"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/searchStartButton"
                android:contentDescription="@null" />

        </TableRow>

    </TableLayout>


    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@drawable/divider"
        android:layout_alignBottom="@+id/searchInputLayout"
        />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:id="@+id/searchResultListView"
        android:layout_below="@+id/searchInputLayout"
        android:layout_alignParentLeft="true" />

    <View
        android:layout_height="1dp"
        android:layout_width="match_parent"
        android:background="@drawable/divider"
        android:layout_alignBottom="@+id/searchResultListView"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchLyricsScrollView"
        android:layout_below="@+id/searchResultListView"
        android:layout_alignParentBottom="true">

            <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/searchLyricsTextView" />

    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="invisible"
        android:id="@+id/searchLoadingLayout"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/searchResultListView">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/searchLoadingProgressBar"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/loading"
            android:id="@+id/searchLoadingTextView" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:visibility="gone"
        android:id="@+id/searchSaveLayout">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </FrameLayout>

        <Button
            android:text="Save Cache"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/button4" />

        <Button
            android:text="Save File"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/button3" />
    </LinearLayout>


</RelativeLayout>
